add more instructions

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <li>Each incorrect answer gives <strong>-5 marks</strong>.</li>
 <li>Only one option is correct per question.</li>
 <li>Questions will appear <strong>one by one</strong>.</li>
+  <li>Read each <strong>question</strong> and its <strong>options</strong> carefully before making your choice.</li>
+  <li>Once you select an <strong>option</strong>, you will automatically move to the <strong>next question</strong>.</li>
+  <li>You will not be able to go <strong>back</strong> to any <strong>previous</strong> question after moving <strong>forward</strong>.</li>
 <li>At the end, your <strong>final score</strong> and explanations for incorrect answers will be displayed.</li>
 </ul>
 <button onclick="startQuiz()">Start Quiz</button>
